# book_python-one-liners

./: pyproject.toml
python_one_liners/: algorithms.py  numpy_oneliners.py
tests/: test_algorithms.py  test_numpy_one_liners.py  test_python_one_liners.py
